--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,9 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-register></app-register>
+  <!-- <app-register></app-register> -->
    <app-root></app-root> 
+   <!-- <app-login1></app-login1> -->
   
 </body>
 </html>
